# GeometryBackendSdkPython

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  README.rst  justfile  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/api/: modules.rst  shapediver.geometry_api_v2.client.api.rst  shapediver.geometry_api_v2.client.models.rst  shapediver.geometry_api_v2.client.rst  shapediver.geometry_api_v2.rst  shapediver.rst
src/shapediver/geometry_api_v2/: __init__.py  sd_client.py  sd_utils.py  skeleton.py
src/shapediver/geometry_api_v2/client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/shapediver/geometry_api_v2/client/api/: __init__.py  analytics_api.py  ar_scene_api.py  assets_api.py  auth_api.py  auth_group_api.py  export_api.py  file_api.py  gltf_api.py  log_api.py  model_api.py  model_state_api.py  output_api.py  script_api.py  sdtf_api.py  session_api.py  system_api.py  texture_api.py
src/shapediver/geometry_api_v2/client/models/: __init__.py  at_least_one_any_date_extended.py  at_least_one_uuid.py  commmons_parameter_asset.py  commons_basic_parameter.py  commons_computation_status.py  commons_group.py  commons_model_blocking_reasons.py  commons_model_status.py  commons_parameter_chunk.py  commons_stype_parameter.py  commons_ticket.py  commons_ticket_type.py  null_obj.py  query_computation_statistics_status.py  query_computation_status.py  query_computation_type.py  query_gltf_conversion.py  query_model_status.py  query_order.py  req_any_credit_metric_id.py  req_authorization_group.py  req_basic_parameter.py  req_cache.py  req_configure.py  req_credit_metric.py  req_credit_metrics.py  req_customization.py  req_customization_or_cache.py  req_customization_or_export.py  req_export.py  req_export_definition.py  req_export_definition_group.py  req_export_definitions.py  req_export_or_cache.py  req_file_definition.py  req_file_upload.py  req_group.py  req_log_level.py  req_log_message.py  (+227 more)
tests/: README.md  conftest.py  test_analytics_api.py  test_ar_scene_api.py  test_auth_group_api.py  test_export_api.py  test_file_api.py  test_gltf_api.py  test_model_api.py  test_model_state_api.py  test_output_api.py  test_sd_utils.py  test_sdtf_api.py  test_session_api.py  test_skeleton.py  test_texture_api.py
